mzk commit add jvm